--- a/CPClient/src/main/resources/fxml/salesmanUI/VIP.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/VIP.fxml
@@ -1,133 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.text.*?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #FFF7FB;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saleUI.SaleNewController">
+<?import javafx.scene.text.Font?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saleUI.SaleNewController">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" />
-      <Pane layoutX="-4.0" prefHeight="97.0" prefWidth="1207.0" style="-fx-background-color: #FFECEC;">
-         <children>
-            <Label layoutX="206.0" layoutY="20.0" text="CuteProject" textFill="#9f353a">
-               <font>
-                  <Font name="System Bold Italic" size="20.0" />
-               </font>
-            </Label>
-            <ImageView layoutX="1159.0" layoutY="15.0">
-               <image>
-                  <Image url="@/img/logOut.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Pane>
-       <VBox layoutX="13.0" layoutY="74.0" prefHeight="730.0" prefWidth="122.0" style="-fx-background-color: #ff7575;">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
-            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
-            <MenuButton fx:id="newBtn" mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      新建" textFill="#9f353a">
-              <items>
-                <MenuItem fx:id="aaa" mnemonicParsing="false" style="-fx-background-color: transparant;" text="单据1" />
-                <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单据2" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单        据         3" />
-              </items>
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </MenuButton>
-            <MenuButton fx:id="lookBtn" mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: #C48888;" text="      查看" textFill="#9f353a">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <items>
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparant;" text="单据1" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单据2" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单        据         3" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="客户信息" />
-               </items>
-            </MenuButton>
-            <MenuButton fx:id="lookBtn1" mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      个人" textFill="#9f353a">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <items>
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparant;" text="个人信息" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="消息" />
-               </items>
-            </MenuButton>
-            <Button fx:id="draftBtn" mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="草稿" textFill="#9f353a">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-      <Circle fill="#5cfeff99" layoutX="107.0" layoutY="87.0" opacity="0.67" radius="80.0" stroke="BLACK" strokeMiterLimit="0.0" strokeWidth="0.0">
-         <effect>
-            <DropShadow blurType="GAUSSIAN" color="#c74242cf" height="0.0" radius="6.2675" width="27.07" />
-         </effect>
-      </Circle>
-      <ScrollPane fx:id="scrollPane" layoutX="200.0" layoutY="148.0" prefHeight="615.0" prefWidth="935.0" style="-fx-background-color: #FFB5B5;">
+      <fx:include source="Sale.fxml" />
+      <ScrollPane fx:id="scrollPane" layoutX="430.0" layoutY="310.0" prefHeight="435.0" prefWidth="707.0" style="-fx-background-color: #FFB5B5;">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="672.0" prefWidth="920.0" style="-fx-background-color: #FFB5B5;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="480.0" prefWidth="703.0" style="-fx-background-color: #FFB5B5;">
                <children>
-                  <Label layoutX="89.0" layoutY="39.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-                  <Label layoutX="116.0" layoutY="46.0" text="客户信息">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <Pane layoutX="89.0" layoutY="94.0" prefHeight="578.0" prefWidth="722.0">
+                  <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="648.0" layoutY="29.0">
+                     <image>
+                        <Image url="@../../img/edit.png" />
+                     </image>
+                  </ImageView>
+                  <GridPane layoutX="36.0" layoutY="42.0" prefHeight="352.0" prefWidth="612.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
                      <children>
-                        <Separator layoutX="128.0" layoutY="67.0" opacity="0.0" orientation="VERTICAL" prefHeight="538.0" prefWidth="10.0" />
-                        <Label prefHeight="45.0" prefWidth="145.0" text="姓名" textFill="#938c8c" />
-                        <Label layoutY="45.0" prefHeight="45.0" prefWidth="145.0" text="分类" textFill="#938c8c" />
-                        <Label layoutY="88.0" prefHeight="45.0" prefWidth="145.0" text="电话" textAlignment="CENTER" textFill="#938c8c" />
-                        <Label layoutY="133.0" prefHeight="45.0" prefWidth="145.0" text="地址" textAlignment="CENTER" textFill="#938c8c" />
-                        <Label layoutY="176.0" prefHeight="45.0" prefWidth="145.0" text="默认业务员" textAlignment="CENTER" textFill="#938c8c" />
-                        <Label layoutX="1.0" layoutY="285.0" prefHeight="45.0" prefWidth="145.0" text="应收额度" textAlignment="CENTER" textFill="#938c8c" />
-                        <TextField layoutX="146.0" layoutY="14.0" opacity="0.65" />
-                        <TextField layoutX="541.0" layoutY="55.0" opacity="0.61" />
-                        <TextField layoutX="146.0" layoutY="54.0" opacity="0.65" />
-                        <Label layoutX="414.0" layoutY="5.0" prefHeight="45.0" prefWidth="145.0" text="编号" textFill="#938c8c" />
-                        <TextField layoutX="541.0" layoutY="14.0" opacity="0.65" />
-                        <Label layoutX="414.0" layoutY="44.0" prefHeight="45.0" prefWidth="145.0" text="级别" textFill="#938c8c" />
-                        <TextField layoutX="146.0" layoutY="97.0" opacity="0.65" />
-                        <TextField layoutX="146.0" layoutY="142.0" opacity="0.65" />
-                        <TextField layoutX="541.0" layoutY="97.0" opacity="0.61" />
-                        <Label layoutX="414.0" layoutY="88.0" prefHeight="45.0" prefWidth="145.0" text="邮编" textAlignment="CENTER" textFill="#938c8c" />
-                        <Label layoutX="414.0" layoutY="133.0" prefHeight="45.0" prefWidth="145.0" text="电子邮箱" textAlignment="CENTER" textFill="#938c8c" />
-                        <TextField layoutX="541.0" layoutY="142.0" opacity="0.61" />
-                        <TextField layoutX="146.0" layoutY="185.0" opacity="0.65" />
-                        <TextField layoutX="146.0" layoutY="294.0" opacity="0.65" />
-                        <Label layoutY="228.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-                        <Label layoutX="29.0" layoutY="235.0" text="应收应付">
+                        <Label prefHeight="44.0" prefWidth="129.0" text="姓名" textFill="#938c8c" GridPane.rowIndex="1" />
+                        <Label prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
+                        <Label prefHeight="45.0" prefWidth="145.0" text="电话" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="3" />
+                        <Label text="     客户信息">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <Label layoutX="1.0" layoutY="328.0" prefHeight="45.0" prefWidth="145.0" text="应收" textAlignment="CENTER" textFill="#938c8c" />
-                        <TextField layoutX="146.0" layoutY="337.0" opacity="0.65" />
-                        <Label layoutX="414.0" layoutY="328.0" prefHeight="45.0" prefWidth="145.0" text="应付" textAlignment="CENTER" textFill="#938c8c" />
-                        <TextField layoutX="541.0" layoutY="337.0" opacity="0.61" />
+                        <Label prefHeight="45.0" prefWidth="145.0" text="默认业务员" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="8" />
+                        <Label prefHeight="45.0" prefWidth="145.0" text="分类" textFill="#938c8c" GridPane.rowIndex="2" />
+                        <Label prefHeight="45.0" prefWidth="145.0" text="地址" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+                        <Label prefHeight="45.0" prefWidth="145.0" text="编号" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                        <TextField opacity="0.65" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                        <Label prefHeight="45.0" prefWidth="145.0" text="电子邮箱" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="4" />
+                        <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                        <Label prefHeight="45.0" prefWidth="145.0" text="级别" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                        <Label prefHeight="45.0" prefWidth="145.0" text="邮编" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                        <TextField opacity="0.65" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                        <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                        <Label prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" GridPane.rowIndex="6" />
+                        <Label text="     应收应付" GridPane.rowIndex="6">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="45.0" prefWidth="145.0" text="应收额度" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="7" />
+                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <Label prefHeight="45.0" prefWidth="145.0" text="应收" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                        <Label prefHeight="45.0" prefWidth="145.0" text="应付" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+                        <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="8" />
                      </children>
-                  </Pane>
-                  <Button layoutX="735.0" layoutY="610.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="66.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #a15858;" text="保存" textFill="#9f353a">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Button>
-                  <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="768.0" layoutY="34.0">
-                     <image>
-                        <Image url="@../stockmanUI/edit.png" />
-                     </image>
-                  </ImageView>
+                  </GridPane>
                </children>
             </AnchorPane>
         </content>
       </ScrollPane>
+
+       <Pane layoutX="216.0" layoutY="148.0" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
+           <children>
+               <Label layoutX="34.0" layoutY="14.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
+               <Label layoutX="55.0" layoutY="23.0" text="客户管理">
+                   <font>
+                       <Font size="18.0" />
+                   </font>
+               </Label>
+               <TextField fx:id="searchField" layoutX="625.0" layoutY="74.0" prefHeight="32.0" prefWidth="167.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" />
+               <Button fx:id="searchBtn" layoutX="825.0" layoutY="77.0" mnemonicParsing="false" onAction="#setSearchBtn" prefHeight="27.0" prefWidth="65.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询" textFill="WHITE" />
+               <ImageView fitHeight="20.0" fitWidth="18.0" layoutX="764.0" layoutY="81.0">
+                   <image>
+                       <Image url="@../../img/search.png" />
+                   </image>
+               </ImageView>
+               <Button fx:id="goodsNameSearchBtn" layoutX="34.0" layoutY="77.0" mnemonicParsing="false" onAction="#onGoodsNameSearchBtnClicked" prefHeight="27.0" prefWidth="65.0" style="-fx-background-radius: 23; -fx-border-color: #9f353a; -fx-border-radius: 23;" text="客户名" textFill="#9f353a" />
+               <Button fx:id="goodsTypeSearchBtn" layoutX="115.0" layoutY="77.0" mnemonicParsing="false" onAction="#onGoodsTypeSearchBtnClicked" prefHeight="27.0" prefWidth="72.0" style="-fx-background-radius: 23; -fx-border-color: #9f353a; -fx-border-radius: 23;" text="客户ID" textFill="#9f353a" />
+               <Button fx:id="goodsIDSearchBtn" layoutX="210.0" layoutY="77.0" mnemonicParsing="false" onAction="#onGoodsIDSearchBtnClicked" prefHeight="27.0" prefWidth="72.0" style="-fx-background-radius: 23; -fx-border-color: #9f353a; -fx-border-radius: 23;" text="客户电话" textFill="#9f353a" />
+           </children></Pane>
+
+       <Pane layoutX="216.0" layoutY="310.0" prefHeight="435.0" prefWidth="196.0" style="-fx-background-color: #FFB5B5;">
+           <children>
+               <VBox fx:id="vBox" layoutX="7.0" layoutY="54.0" prefHeight="369.0" prefWidth="182.0" style="-fx-border-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 15;" />
+               <Pane layoutX="8.0" layoutY="6.0" prefHeight="42.0" prefWidth="180.0" style="-fx-border-color: #ff7575; -fx-border-radius: 12;">
+                   <children>
+                       <Label fx:id="presentLocation" layoutX="49.0" layoutY="13.0" prefHeight="17.0" prefWidth="113.0" />
+                       <Label fx:id="presentLocation" layoutX="11.0" layoutY="10.0" prefHeight="23.0" prefWidth="159.0" text="提示" textFill="#9f353a" />
+                   </children>
+               </Pane>
+           </children></Pane>
    </children>
 </AnchorPane>
