--- a/CPClient/src/main/resources/fxml/managerUI/PresentForSum.fxml
+++ b/CPClient/src/main/resources/fxml/managerUI/PresentForSum.fxml
@@ -76,6 +76,7 @@
             <Label fx:id="dateErrorMessage" layoutX="267.0" layoutY="70.0" />
             <Label fx:id="totalErrorMessage" layoutX="247.0" layoutY="316.0" prefHeight="24.0" prefWidth="110.0" />
             <Label fx:id="voucherErrorMessage" layoutX="451.0" layoutY="316.0" prefHeight="24.0" prefWidth="164.0" />
+            <Label fx:id="nullErrorMessage" layoutX="254.0" layoutY="358.0" />
          </children>
       </Pane>
       <Pane fx:id="presentListPane" layoutY="159.0" prefHeight="435.0" prefWidth="196.0" style="-fx-background-color: #FFB5B5;">
