--- a/CPClient/src/main/resources/fxml/managerUI/PresentForSum.fxml
+++ b/CPClient/src/main/resources/fxml/managerUI/PresentForSum.fxml
@@ -7,7 +7,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="594.0" prefWidth="921.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.managerUI.PresentForSumController">
+<!-- <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="594.0" prefWidth="921.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.managerUI.PresentForSumController"> -->
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="594.0" prefWidth="921.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <children>
   <!--  <fx:include source="Stockman.fxml" /> -->
       <Pane prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
@@ -21,7 +23,10 @@
          </children></Pane>
       <Pane layoutX="215.0" layoutY="159.0" prefHeight="435.0" prefWidth="706.0" style="-fx-background-color: #FFB5B5;">
          <children>
-            <TextField fx:id="sumField" layoutX="343.0" layoutY="261.0" prefHeight="50.0" prefWidth="72.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" />
+            <TextField fx:id="totalField" layoutX="343.0" layoutY="261.0" prefHeight="50.0" prefWidth="72.0" style="-fx-background-radius: 20; -fx-border-radius: 20;">
+               <font>
+                  <Font size="20.0" />
+               </font></TextField>
             <Label layoutX="483.0" layoutY="21.0" />
             <ImageView fitHeight="228.0" fitWidth="215.0" layoutY="2.0">
                <image>
@@ -37,26 +42,29 @@
                   <Font size="20.0" />
                </font>
             </TextField>
-            <TextField fx:id="finishYearField" layoutX="343.0" layoutY="107.0" prefHeight="50.0" prefWidth="72.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" />
+            <TextField fx:id="finishYearField" layoutX="343.0" layoutY="107.0" prefHeight="50.0" prefWidth="72.0" style="-fx-background-radius: 20; -fx-border-radius: 20;">
+               <font>
+                  <Font size="20.0" />
+               </font></TextField>
             <Button fx:id="saveBtn" layoutX="584.0" layoutY="352.0" mnemonicParsing="false" onAction="#save" prefHeight="27.0" prefWidth="65.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="保存" textFill="WHITE" />
             <TextField fx:id="startMonthField" layoutX="457.0" layoutY="8.0" prefHeight="50.0" prefWidth="72.0" style="-fx-background-radius: 20; -fx-border-radius: 20;">
                <font>
-                  <Font size="24.0" />
+                  <Font size="20.0" />
                </font>
             </TextField>
             <TextField fx:id="finishMonthField" layoutX="461.0" layoutY="107.0" prefHeight="50.0" prefWidth="72.0" style="-fx-background-radius: 20; -fx-border-radius: 20;">
                <font>
-                  <Font size="24.0" />
+                  <Font size="20.0" />
                </font>
             </TextField>
             <TextField fx:id="startDayField" layoutX="581.0" layoutY="8.0" prefHeight="50.0" prefWidth="72.0" style="-fx-background-radius: 20; -fx-border-radius: 20;">
                <font>
-                  <Font size="24.0" />
+                  <Font size="20.0" />
                </font>
             </TextField>
             <TextField fx:id="finishDayField" layoutX="581.0" layoutY="107.0" prefHeight="50.0" prefWidth="72.0" style="-fx-background-radius: 20; -fx-border-radius: 20;">
                <font>
-                  <Font size="24.0" />
+                  <Font size="20.0" />
                </font>
             </TextField>
             <Label layoutX="424.0" layoutY="21.0" text="年" />
@@ -70,7 +78,7 @@
             <Button fx:id="searchBtn" layoutX="566.0" layoutY="194.0" mnemonicParsing="false" onAction="#search" prefHeight="36.0" prefWidth="101.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询商品" textFill="WHITE" />
             <TextField fx:id="voucherField" layoutX="581.0" layoutY="261.0" prefHeight="50.0" prefWidth="72.0" style="-fx-background-radius: 20; -fx-border-radius: 20;">
                <font>
-                  <Font size="24.0" />
+                  <Font size="20.0" />
                </font>
             </TextField>
             <Label fx:id="dateErrorMessage" layoutX="267.0" layoutY="70.0" />
