改正了transparent的拼写，更改了财务人员主界面的的包结构；主界面的css我们可以统一用一个，实现风格变换的修改性；fxml中最好不要出现样式相关的设置。

--- a/CPClient/src/main/java/ui/AdministratorUI/user.fxml
+++ b/CPClient/src/main/java/ui/AdministratorUI/user.fxml
@@ -24,11 +24,11 @@
       </Pane>
       <VBox layoutX="13.0" layoutY="74.0" prefHeight="730.0" prefWidth="122.0" style="-fx-background-color: #ff7575;">
          <children>
-            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
-            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
+            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparent;" textFill="#9f353a" />
+            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparent;" textFill="#9f353a" />
             <MenuButton mnemonicParsing="false" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      新建" textFill="#9f353a">
               <items>
-                <MenuItem mnemonicParsing="false" style="-fx-background-color: transparant;" styleClass="ui.saleUI.Sale.css" text="销售员" />
+                <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="ui.saleUI.Sale.css" text="销售员" />
                 <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="库存管理员" />
                   <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="财务人员" />
                   <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="总经理" />
@@ -42,13 +42,13 @@
                   <Font size="18.0" />
                </font>
                <items>
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparant;" styleClass="ui.saleUI.Sale.css" text="销售员" />
+                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="ui.saleUI.Sale.css" text="销售员" />
                   <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="库存管理员" />
                   <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="财务人员" />
                   <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="总经理" />
                </items>
             </MenuButton>
-            <Button mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="个人" textFill="#9f353a">
+            <Button mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="个人" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
