--- a/CPClient/src/main/resources/css/mainUI/MainUI.css
+++ b/CPClient/src/main/resources/css/mainUI/MainUI.css
@@ -1,5 +1,6 @@
 .button {
      -fx-background-color: transparent;
+     -fx-text-fill: #9f353a
 }
 
 .button:hover {
@@ -8,7 +9,7 @@
 
 .menu-button {
 	-fx-background-color: transparent;
-	-fx-text-fill: #9f353a;
+	-fx-text-fill: #9f353a
 }
 
 .menu-button:hover {
@@ -17,7 +18,7 @@
 
 .menu-item {
 	-fx-text-fill: #9f353a;
-	-fx-background-color:  #ff7575;
+	-fx-background-color:  #ff7575
 }
 
 .label:hover {
