--- a/CPClient/src/main/resources/css/mainUI/MainUI.css
+++ b/CPClient/src/main/resources/css/mainUI/MainUI.css
@@ -1,3 +1,12 @@
+
+.background {
+	-fx-background-color: #FFF7FB
+	
+}
+
+.vbox {
+	-fx-background-color: #ff7575;
+}
 .button {
      -fx-background-color: transparent;
      -fx-text-fill: #9f353a
