写了新建收款单时的界面，不过子界面加载的css中关于背景的样式使用不了；补充体系结构account包的po

--- a/CPClient/src/main/resources/html/try.css
+++ b/CPClient/src/main/resources/html/try.css
@@ -68,6 +68,7 @@ body {
   margin: 0;
 }
 
+/* 
 @-webkit-keyframes opacity {
   0%, 100% {
     opacity: 0;
@@ -137,3 +138,5 @@ body {
   }
 }
 
+* 
+*/
