--- a/CPClient/src/main/resources/fxml/accountUI/CollectionList.fxml
+++ b/CPClient/src/main/resources/fxml/accountUI/CollectionList.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane fx:id = "root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="594.0" prefWidth="921.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.accountUI.CollectionListWinController">
+
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="594.0" prefWidth="921.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.accountUI.CollectionListWinController">
    <children>
       <Pane prefHeight="79.0" prefWidth="921.0">
          <children>
@@ -17,12 +18,12 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id = "listID" layoutX="574.0" layoutY="26.0" prefHeight="27.0" prefWidth="177.0" text="SKD-yyyymmdd-00000">
+            <Label fx:id="listID" layoutX="574.0" layoutY="26.0" prefHeight="27.0" prefWidth="177.0" text="SKD-yyyymmdd-00000">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label fx:id = "operator" layoutX="802.0" layoutY="28.0" prefHeight="23.0" prefWidth="105.0" text="操作员名字">
+            <Label fx:id="operator" layoutX="802.0" layoutY="28.0" prefHeight="23.0" prefWidth="105.0" text="操作员名字">
                <font>
                   <Font size="15.0" />
                </font>
@@ -46,14 +47,14 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="270.0" prefWidth="746.0">
                      <children>
-                        <TableView opacity="0.68" prefHeight="287.0" prefWidth="746.0" style="-fx-background-color: transparent;">
+                        <TableView fx:id="TransferListTableView" opacity="0.68" prefHeight="287.0" prefWidth="746.0" style="-fx-background-color: transparent;">
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                            <columns>
-                              <TableColumn prefWidth="-1.0" text="银行账户" />
-                              <TableColumn prefWidth="-1.0" text="转账金额" />
-                              <TableColumn prefWidth="-1.0" text="备注" />
+                              <TableColumn fx:id="account" prefWidth="-1.0" text="银行账户" />
+                              <TableColumn fx:id="amount" prefWidth="-1.0" text="转账金额" />
+                              <TableColumn fx:id="note" prefWidth="-1.0" text="备注" />
                            </columns>
                         </TableView>
                      </children>
